--- a/clang/lib/Tooling/Syntax/CMakeLists.txt
+++ b/clang/lib/Tooling/Syntax/CMakeLists.txt
@@ -1,10 +1,18 @@
 set(LLVM_LINK_COMPONENTS Support)
 
 add_clang_library(clangToolingSyntax
+  BuildFromAST.cpp
+  ComputeReplacements.cpp
+  Corpus.cpp
+  Nodes.cpp
+  Syntax.cpp
   TokenBuffer.cpp
+  Transform.cpp
 
   LINK_LIBS
   clangBasic
   clangFrontend
   clangLex
+  clangAST
+  clangToolingCore
   )
